fix alignment after removing plan

--- a/prototypes/searchform/myfilters.css
+++ b/prototypes/searchform/myfilters.css
@@ -2,7 +2,6 @@
     font-family: Lato !important;    
     grid-column-start: 6; 
     grid-column-end: 7;
-    width: 250px;
     margin-top: -5px;
   }
 
